<resources>
    <string name="app_name">Plants Reminder</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="description">It\'s easy to forget to water your plants, but it doesn\'t have to be.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="underline">_</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="tree">Tree</string>
    <string name="herbs">Herbs</string>
    <string name="fern">Fern</string>
    <string name="moss">Moss</string>
    <string name="conifer">Conifer</string>
    <string name="flowering">Flowering</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="Watering">Watering every: </string>
    <string name="days">days</string>
    <string name="Fertilizer">Does it need Fertilizer?</string>
    <string name="Pruning">Does it need Pruning?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Monthly">Monthly</string>
    <string name="Weekly">Weekly</string>
    <string name="ThreeM">3 Months</string>
    <string name="SixM">6 Months</string>
    <string name="Yearly">Yearly</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="skip">Skip</string>
    <string name="drop_count">6</string>
    <string name="dirt_count">6</string>
    <string name="pruning_count">6</string>
    <string name="last_entry">20/5</string>
    <string name="__">/</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add_your_first_plant">Add your first plant!</string>
    <string name="add_a_new_plant">Add a new plant!</string>
    <string name="oops_not_any_plants_yet">Oops, not any plants yet!</string>
    <string name="add_my_first_plant_now">Add my first plant now!</string>
    <string name="_2_days_till_next_watering">2 Days till next watering</string>
    <string name="sort">Sort</string>
    <string name="sort_plants_by">Sort plants by:</string>
    <string name="most_recently_watered">Most recently watered</string>
    <string name="least_recent_watered">Least recently watered</string>
    <string name="name_ascend">Names ascend</string>
    <string name="name_descent">Names descent</string>
    <string name="needs_water">Needs Water</string>
</resources>
