<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="SpUsage, ContentDescription">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="#07000000"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:ignore="Autofill,RtlHardcoded" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="#07000000"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        tools:ignore="RtlHardcoded"/>

    <Button
        android:id="@+id/accountActionButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/line_bottom_red_border"
        android:text="@string/sign_up"
        android:textColor="@color/colorSecondaryText"
        android:enabled="false"
        android:textSize="18dp"
        android:onClick="onAccountActionClick"
        android:layout_marginBottom="15sp">
    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_marginBottom="15sp">
    </ProgressBar>

    <TextView
        android:id="@+id/underlineTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/underline"
        android:textSize="14dp"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:layout_marginBottom="15sp">
    </TextView>

    <Button
        android:id="@+id/changeSLBttn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/line_bottom_gray_border"
        android:enabled="true"
        android:onClick="onChangeSLClick"
        android:text="@string/login"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp">

    </Button>

</LinearLayout>