<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_your_first_plant"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/background_plant">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#07000000"
            android:drawableLeft="@drawable/ic_plant_white_24dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textColorHint="@color/colorTransparentWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,RtlHardcoded" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/style_radio_button"
                android:gravity="center_horizontal|bottom"
                android:text="@string/fern"
                android:textColor="@color/colorWhite"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/style_radio_button"
                android:gravity="center_horizontal|bottom"
                android:text="@string/moss"
                android:textColor="@color/colorWhite"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/style_radio_button"
                android:gravity="center_horizontal|bottom"
                android:text="@string/conifer"
                android:textColor="@color/colorWhite"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/style_radio_button"
                android:gravity="center_horizontal|bottom"
                android:text="@string/flowering"
                android:textColor="@color/colorWhite"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>