<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".plant_entry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_plant"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#07000000"
            android:ems="10"
            android:hint="@string/name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTransparentWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/plantImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plantImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/lastTextView"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/last_entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantImageView" />

        <TextView
            android:id="@+id/fertTextView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/__"
            android:textColor="#dddddd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/prunTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/waterTextView"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/prunTextView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/__"
            android:textColor="@color/pruningColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fertTextView"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/waterImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/plantImageView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:srcCompat="@drawable/dropfinal"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/waterTextView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/__"
            android:textColor="@color/dropColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fertTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/plantImageView"
            app:layout_constraintTop_toBottomOf="@+id/waterImageView" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/waterImageView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:srcCompat="@drawable/dirt"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:srcCompat="@drawable/prunercolored"
            tools:ignore="ContentDescription" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>